--- a/src/assets/sass/_app.scss
+++ b/src/assets/sass/_app.scss
@@ -1,5 +1,22 @@
+html {
+    height: 100%;
+    box-sizing: border-box;
+  }
+  
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+}
+
 .body {
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: #faf9f4;
+    position: relative;
+    min-height: 100%;
+}
+
+.container {
+    max-width: 1100px;
 }
