--- a/src/assets/sass/_main.scss
+++ b/src/assets/sass/_main.scss
@@ -22,8 +22,11 @@
         top: 0;
         right: 0;
         border-radius: 0;
-        border-bottom-left-radius: 5px;
+        border-bottom-left-radius: 15px;
         background-color: $primary;
+        font-size: 1.1rem;
+        font-weight: 500;
+        color: white;
     }
 
     .title {
@@ -38,5 +41,55 @@
 
     .synopsis {
         font-size: 1.2rem
+    }
+}
+
+.books-list {
+    position: relative;
+
+    .book {
+        position: relative;
+        background-color: #faf9f3;
+        border-radius: 10px;
+
+        &:nth-child(1) {
+            margin-right: 20px;
+        }
+        &:nth-child(2) {
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+        &:nth-child(3) {
+            margin-left: 20px;
+        }
+
+        img.center {
+            min-width: 400px;
+            display: block;
+            margin: 0 auto;
+        }
+
+        .title {
+            margin-bottom: 0.4rem;
+            font-size: 1.2rem;
+        }
+    }
+
+    .position {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        padding: 8px;
+
+        border: 2px solid $primary;
+        color: $primary;
+        text-align: center;
+        line-height: 1rem;
+        font-size: 1.4rem;
+        font-weight: 700;
     }
 }
