--- a/src/assets/sass/_app.scss
+++ b/src/assets/sass/_app.scss
@@ -1,12 +1,13 @@
 html {
     height: 100%;
     box-sizing: border-box;
+    position: relative;
   }
   
   *,
   *:before,
   *:after {
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 .body {
@@ -14,7 +15,11 @@ html {
     padding-right: 2rem;
     background-color: #faf9f4;
     position: relative;
-    min-height: 100%;
+    min-height: calc(100vh - 70px); /* will cover the 100% of viewport */
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 100px;
 }
 
 .container {
