--- a/src/assets/sass/_footer.scss
+++ b/src/assets/sass/_footer.scss
@@ -1,12 +1,12 @@
 footer {
-    position: absolute;
     bottom: 0;
-    width: 100%;
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: #333;
     width: 100%;
+    height: 50px;
     text-align: center;
+    display: grid;
 
     .container{
         margin: 0 auto;
