add top book link

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -31,7 +31,7 @@ $link-focus-border: $primary;
 @import "~buefy/src/scss/buefy";
 
 // backgrounds
-$ligh-yellow: #faf9f3;
+$light-yellow: #faf9f3;
 
 h1 {
     font-size: 2rem;
