--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -2,6 +2,7 @@
     max-width: 90%;
     margin: 0 auto;
     display: flex;
+    background-color: unset;
 }
 
 .navbar-item {
@@ -27,4 +28,10 @@
         font-size: 16px;
         cursor: pointer;
     }
+}
+
+.navbar-end {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
