--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -32,6 +32,8 @@ $link-focus-border: $primary;
 
 // backgrounds
 $light-yellow: #faf9f3;
+$button-yellow: #DCA94D;
+$dark-yellow: #A8772B;
 
 h1 {
     font-size: 2rem;
@@ -45,4 +47,16 @@ h2 {
 h3 {
     font-size: 1.2rem;
     font-weight: 600;
+}
+
+.button {
+    background-color: white;
+    color: $button-yellow;
+    border: 1px solid $button-yellow;
+
+    &.active{
+        background-color: $button-yellow;
+        color: white;
+        border: none;
+    }
 }
