--- a/src/assets/sass/_book.scss
+++ b/src/assets/sass/_book.scss
@@ -1,78 +1,50 @@
-.featured-book {
-    background-color: #faf9f3;
-    padding: 2.5rem;
-    position: relative;
+.container.book-page {
+    background-color: white;
+    margin-left: 14rem;
+    margin-right: 14rem;
 
-    img {
-        float: left;
-        padding-left: 15px;
-        padding-right: 15px;
-        border-radius: 5px;
+    .columns .title{
+    text-align: left;
     }
 
-    .recommended {
-        position: absolute;
-        top: 0;
-        right: 0;
-        border-radius: 0;
-        border-bottom-left-radius: 15px;
-        background-color: $primary;
-        font-size: 1.1rem;
-        font-weight: 500;
-        color: white;
-    }
-
-    .title {
-        margin-bottom: 0.4rem;
+    h1 {
         font-size: 2rem;
+        font-weight: 800;
+        color: $dark-yellow
     }
 
-    .author {
-        padding-bottom: 2rem;
-        font-size: 1.5rem
+    h3 {
+        font-style: italic;
+        font-weight: 200;
     }
 
-    .synopsis {
-        font-size: 1.2rem
+    .votes {
+        text-align: left;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .button {
+      margin-left: 1rem;
+    }
+
+    h4 {
+        font-size: 1.6rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
     }
 }
 
-.books-list {
-    position: relative;
+.book-page-synopsis{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    text-align: left;
+    padding: 0 3rem 0 3rem;
+}
 
-    .book {
-        position: relative;
-        background-color: #faf9f3;
-        border-radius: 10px;
-        margin: 1rem;
-
-        img.center {
-            min-width: 400px;
-            display: block;
-            margin: 0 auto;
-        }
-
-        .title {
-            margin-bottom: 0.4rem;
-            font-size: 1.2rem;
-        }
-    }
-
-    .position {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-
-        border-radius: 50%;
-        width: 36px;
-        height: 36px;
-        padding: 8px;
-
-        border: 2px solid $primary;
-        color: $primary;
-        text-align: center;
-        line-height: 1rem;
-        font-size: 1.4rem;
-        font-weight: 700;
-    }
+.book-page-rating {
+    text-align: left;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0 3rem 3rem 3rem;
 }
